--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,14 +1,14 @@
 This file only lists major changes and bug fixes for each version
 
-v. 1.1 taxator-tk
-=================
+v. 1.1 taxator-tk (=SVN r45)
+============================
 * code cleanup
 * indexed FASTA access (now runs on computers with much less RAM)
 * code speedup by factor of two
 * clean up command line options
 
-v. 1.0 taxator-tk
-=================
+v. 1.0 taxator-tk (=SVN r43)
+============================
 * publication release, many functionality added
 * evaluations done on this version
 
